@@ -216,6 +216,9 @@ __thiscall void Entity_Player::TriggerTrinketAdded(unsigned int trinketID, bool 
 "558bec83e4f85153568bf157837e??00":
 __thiscall void Entity_Player::TriggerTrinketRemoved(unsigned int trinketID);
 
+"558bec83e4f883ec0c5356576a0068????????8bf1":
+__thiscall void Entity_Player::TriggerEchoChamber(uint32_t pocketItemType, int cardOrPillColor);
+
 "558bec83e4f85153565733f6":
 __thiscall int Entity_Player::GetWeaponModifiers();
 
@@ -314,7 +317,13 @@ __thiscall void Entity_Player::ClearCollectibleAnim(CollectibleType collectible)
 __thiscall unsigned int Entity_Player::GetMaxPocketItems();
 
 "558bec515356578bf9e8????????8b5d":
-__thiscall void Entity_Player::AddPocketItem(unsigned int slot, unsigned int itemID);
+__thiscall void Entity_Player::AddPocketItem(int id, uint32_t pocketItemType);
+
+"558bec8b55??85d278??83fa0473??8b45??8984??????????c784??????????01000000":
+__thiscall void Entity_Player::SetCard(int slot, int card);
+
+"558bec8b55??85d278??83fa0473??8b45??8984??????????c784??????????00000000":
+__thiscall void Entity_Player::SetPill(int slot, int pillColor);
 
 "558bec568bf1e8????????8b0d":
 __thiscall void Entity_Player::AddBoneOrbital(Vector* Position);
@@ -424,6 +433,9 @@ __thiscall void Entity_Player::MorphToCoopGhost();
 
 "558bec8b45??538bd983f8ff":
 __thiscall void Entity_Player::RemovePocketItem(int slot);
+
+"558bec53568b75??8bd95783feff":
+__thiscall void Entity_Player::DropPocketItem(int slot, Vector* pos);
 
 "558bec6aff68????????64a1????????5083ec58535657a1????????33c5508d45??64a3????????8bf9":
 __thiscall void Entity_Player::RerollAllCollectibles(RNG * rng, bool includeActives);
