@@ -28,6 +28,9 @@ __thiscall void Room::RemoveGridEntityImmediate(int GridIndex, int PathTrail, bo
 "558bec83ec08538bd956578b3d":
 __thiscall void Room::TriggerClear(bool playSound);
 
+"558bec83e4f883ec2ca1????????33c4894424??53568bf1":
+__thiscall void Room::UpdateRedKey();
+
 "558bec83e4f883ec5ca1????????33c4894424??8b45??894424??":
 __thiscall bool Room::CanSpawnObstacleAtPosition(int GridIndex, bool Force);
 
