@@ -217,6 +217,19 @@ ModCallbacks.MC_PRE_PICKUP_UPDATE_GHOST_PICKUPS = 1335
 --ModCallbacks.MC_PRE_NPC_GET_LOOT_LIST = 1336 (Reserved for the future)
 --ModCallbacks.MC_PRE_NPC_UPDATE_GHOST_PICKUPS = 1337 (Reserved for the future)
 
+ModCallbacks.MC_PRE_PLAYER_ADD_CARD = 1350
+ModCallbacks.MC_POST_PLAYER_ADD_CARD = 1351
+ModCallbacks.MC_PRE_PLAYER_ADD_PILL = 1352
+ModCallbacks.MC_POST_PLAYER_ADD_PILL = 1353
+ModCallbacks.MC_POST_PLAYER_REMOVE_CARD = 1354
+ModCallbacks.MC_POST_PLAYER_REMOVE_PILL = 1355
+ModCallbacks.MC_PRE_PLAYER_COLLECT_CARD = 1356
+ModCallbacks.MC_POST_PLAYER_COLLECT_CARD = 1357
+ModCallbacks.MC_PRE_PLAYER_COLLECT_PILL = 1358
+ModCallbacks.MC_POST_PLAYER_COLLECT_PILL = 1359
+ModCallbacks.MC_POST_PLAYER_DROP_CARD = 1360
+ModCallbacks.MC_POST_PLAYER_DROP_PILL = 1361
+
 ModCallbacks.MC_PRE_GRID_ENTITY_DECORATION_UPDATE = 1400
 ModCallbacks.MC_POST_GRID_ENTITY_DECORATION_UPDATE = 1401
 ModCallbacks.MC_PRE_GRID_ENTITY_DOOR_UPDATE = 1402
